# infra-homelab-config

./: .gitignore  .gitleaks.toml  Makefile  README.md
.github/: actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/linters/: .htmlhintrc  .stylelintrc.json  .tflint.hcl  zizmor.yml
.github/validation/: .gitleaks.toml  .mega-linter.yml  actionlint.yaml
.github/workflows/: bookbuddy-web.yml  k8s-deploy.yml  k8s-validate.yml  knowledge-mcp.yml  lint.yml  platform-deploy.yml  platform-validate.yml  repo-tag.yml  service-bookbuddy-web.yml  service-knowledge-mcp.yml  service-stockalert-monitor.yml  service-wake-console.yml  stockalert-monitor.yml  tag.yml
ansible/: .ansible-lint  ansible.cfg  site.yml
ansible/group_vars/: k8s.yml
compose/: compose.yaml
docs/: gha-runner.md  homelab-ca.crt  k8s-gitops-migration-plan.md  knowledge-mcp-handoff.md  rollout-runbook.md  ssh-access-setup.md  terraform-state-migration.md  versions.md  windows-desktop.md
docs/design/: self-hosted-runners.md
kubernetes/argocd-apps/: app-audiobookshelf.yaml  app-bookbuddy.yaml  app-buildarr.yaml  (+18 more)
scripts/: backup-media-appdata.sh  sync-backups-to-onedrive.sh
services/: README.md
services/knowledge-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/knowledge-mcp/src/knowledge_mcp/: __init__.py  models.py  server.py  store.py
services/knowledge-mcp/tests/: test_server.py  test_store.py
systemd/: media-backup.service  media-backup.timer
terraform/: inventory.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
(+229 files in other folders)
