[project]
name = "skyhaven-knowledge-mcp"
version = "0.1.0"
description = "A compact, self-hosted MCP knowledge service for development agents."
requires-python = ">=3.13,<3.14"
dependencies = [
  "mcp==1.28.1",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-cov==6.2.1",
  "ruff==0.12.5",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_mcp"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["knowledge_mcp"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
